# enso

./: .bazelrc  CHANGELOG.md  MODULE.bazel  README.md  build.sbt  eslint.config.mjs  package.json  pnpm-lock.yaml
app/gui/: BUILD.bazel  env.d.ts  index.html  package.json  tailwind.config.js  vite.test.config.ts
app/gui/e2e/dashboard/actions/: index.ts
app/gui/e2e/project-view/: rightPanel.spec.ts
app/gui/project-manager-shim-middleware/: index.ts
app/gui/scripts/: envReplacer.mjs
app/gui/src/: config.ts
app/gui/src/dashboard/: index.tsx  tailwind.css
app/gui/src/dashboard/components/: AnimatedBackground.tsx  Autocomplete.tsx  EditableSpan.tsx  Loader.tsx  Spinner.tsx  StatelessSpinner.tsx
app/gui/src/dashboard/components/AriaComponents/Button/: Button.tsx
app/gui/src/dashboard/components/AriaComponents/Dialog/: Dialog.tsx  DialogTrigger.tsx  Dismiss.tsx  Popover.tsx  index.ts
app/gui/src/dashboard/components/AriaComponents/Form/: Form.tsx
app/gui/src/dashboard/components/AriaComponents/Text/: Text.tsx  useVisualTooltip.tsx
app/gui/src/dashboard/components/Devtools/: EnsoDevtoolsProvider.tsx
app/gui/src/dashboard/components/MarkdownViewer/: MarkdownViewer.tsx  index.ts
app/gui/src/dashboard/components/dashboard/: AssetRow.tsx  DirectoryNameColumn.tsx  ProjectIcon.tsx  column.ts
app/gui/src/dashboard/components/dashboard/column/: LabelsColumn.tsx
app/gui/src/dashboard/components/dashboard/columnHeading/: AccessedByProjectsColumnHeading.tsx  AccessedDataColumnHeading.tsx  DocsColumnHeading.tsx  LabelsColumnHeading.tsx  ModifiedColumnHeading.tsx  NameColumnHeading.tsx  SharedWithColumnHeading.tsx
app/gui/src/dashboard/components/styled/: FocusArea.tsx  FocusRoot.tsx
app/gui/src/dashboard/data/: datalinkSchema.json
app/gui/src/dashboard/hooks/: autoScrollHooks.ts  backendHooks.tsx  contextMenuHooks.tsx  debounceCallbackHooks.ts  debugHooks.ts  lifecycleHooks.ts  measureHooks.ts  scrollHooks.ts  spotlightHooks.tsx  storeHooks.ts
app/gui/src/dashboard/layouts/: AssetContextMenu.tsx  AssetPanel.tsx  AssetProjectSession.tsx  AssetProjectSessions.tsx  AssetProperties.tsx  AssetSearchBar.tsx  AssetsTable.tsx  Chat.tsx  TabBar.tsx
app/gui/src/dashboard/layouts/AssetDiffView/: AssetDiffView.tsx
app/gui/src/dashboard/layouts/AssetDocs/: AssetDocs.tsx
app/gui/src/dashboard/layouts/AssetPanel/: AssetPanel.tsx
app/gui/src/dashboard/layouts/AssetPanel/components/: AssetPanelTabs.tsx  AssetPanelToggle.tsx
app/gui/src/dashboard/layouts/AssetVersions/: AssetVersions.tsx
app/gui/src/dashboard/layouts/AssetsTable/: EventListProvider.tsx
app/gui/src/dashboard/layouts/Settings/: ActivityLogSettingsSection.tsx  FormEntry.tsx  Input.tsx  KeyboardShortcutsSettingsSection.tsx  Section.tsx  SetupTwoFaForm.tsx  Tab.tsx  UserGroupsSettingsSection.tsx  data.tsx  index.tsx
app/gui/src/dashboard/modals/: AgreementsModal.tsx  CaptureKeyboardShortcutModal.tsx  ConfirmDeleteModal.tsx  DragModal.tsx  DuplicateAssetsModal.tsx  NewLabelModal.tsx  UpsertDatalinkModal.tsx  UpsertSecretModal.tsx
app/gui/src/dashboard/pages/authentication/: ConfirmRegistration.tsx  LoadingScreen.tsx  Login.tsx
app/gui/src/dashboard/pages/dashboard/: Dashboard.tsx
app/gui/src/dashboard/providers/: AuthProvider.tsx  DriveProvider.tsx  LocalStorageProvider.tsx  ProjectsProvider.tsx
app/gui/src/dashboard/services/: LocalBackend.ts  RemoteBackend.ts
app/gui/src/dashboard/utilities/: motion.ts
app/gui/src/project-view/assets/: base.css
app/gui/src/project-view/components/: CodeEditor.vue  DockPanel.vue  GraphEditor.vue
app/gui/src/project-view/components/ComponentBrowser/: ComponentEditor.vue
app/gui/src/project-view/components/GraphEditor/: GraphEdge.vue  GraphNode.vue  GraphNodeSelection.vue  GraphVisualization.vue  NodeWidgetTree.vue  collapsing.ts
app/gui/src/project-view/components/GraphEditor/GraphVisualization/: visualizationData.ts
app/gui/src/project-view/components/GraphEditor/widgets/: WidgetPort.vue  WidgetSelection.vue  (+1 more)
app/gui/src/project-view/components/MarkdownEditor/: DocumentationImage.vue  EditorRoot.vue  MarkdownEditorImpl.vue  highlight.ts  markdown.ts
app/gui/src/project-view/components/shared/: AgGridTableView.vue
app/gui/src/project-view/components/widgets/: DropdownWidget.vue  ListWidget.vue  NumericInputWidget.vue
app/gui/src/project-view/composables/: nodeCreation.ts  selection.ts
app/gui/src/project-view/mock/: engine.ts
app/gui/src/project-view/stores/graph/: graphDatabase.ts  index.ts
app/gui/src/project-view/stores/project/: index.ts
app/gui/src/project-view/util/: containers.ts
app/gui/src/project-view/util/ast/: abstract.ts
toolchains/: BUILD.bazel
(+187 files in other folders)
